[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/env/EnvTileset.tres" type="TileSet" id=2]
[ext_resource path="res://source/levels/Level.gd" type="Script" id=3]
[ext_resource path="res://source/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/intractable/Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/intractable/Door.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 336, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 216 )

[node name="Level3" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.203922, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadArea" type="Area2D" parent="."]
collision_layer = 0

[node name="TopCollisionShape" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 320, -24 )
shape = SubResource( 1 )

[node name="BottomCollisionShape" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 320, 392 )
shape = SubResource( 1 )

[node name="LeftCollisionShape" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( -24, 184 )
shape = SubResource( 2 )

[node name="RightCollisionShape" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 664, 184 )
shape = SubResource( 2 )

[node name="Door" parent="." instance=ExtResource( 6 )]
position = Vector2( 48, 304 )
next_level = "res://source/levels/Level4.tscn"

[node name="Key" parent="." instance=ExtResource( 5 )]
position = Vector2( 376, 64 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 336 )

[node name="WallJumpTileMap" type="TileMap" parent="."]
modulate = Color( 0, 0.372549, 0.419608, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
format = 1

[node name="WallTileMap" type="TileMap" parent="."]
modulate = Color( 0, 0.54902, 0.619608, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 65536, 0, 0, 65575, 0, 0, 131072, 0, 0, 131111, 0, 0, 196608, 0, 0, 196647, 0, 0, 262144, 0, 0, 262183, 0, 0, 327680, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327719, 0, 0, 393216, 0, 0, 393255, 0, 0, 458752, 0, 0, 458791, 0, 0, 524288, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524327, 0, 0, 589824, 0, 0, 589863, 0, 0, 655360, 0, 0, 655399, 0, 0, 720896, 0, 0, 720935, 0, 0, 786432, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786471, 0, 0, 851968, 0, 0, 852007, 0, 0, 917504, 0, 0, 917543, 0, 0, 983040, 0, 0, 983079, 0, 0, 1048576, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1114112, 0, 0, 1114151, 0, 0, 1179648, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179687, 0, 0, 1245184, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245199, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245223, 0, 0, 1310720, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310735, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310759, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376271, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441807, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441830, 0, 0, 1441831, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507343, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0 )
[connection signal="body_entered" from="DeadArea" to="." method="_on_DeadArea_body_entered"]
